--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "cmath",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "C's math functions implemented in TypeScript/JavaScript",
   "main": "dist/cmath.js",
   "scripts": {
-    "test": "jest --config jest.config.js --coverage"
+    "test": "jest --config jest.config.json --coverage"
   },
   "keywords": [
     "cmath",
@@ -24,10 +24,10 @@
   "license": "MIT",
   "type": "module",
   "devDependencies": {
-    "@types/jest": "^24.0.12",
-    "@types/node": "^11.13.9",
-    "jest": "^24.7.1",
-    "ts-jest": "^24.0.2",
-    "typescript": "^3.4.5"
+    "@types/jest": "^26.0.13",
+    "@types/node": "^14.10.2",
+    "jest": "^26.4.2",
+    "ts-jest": "^26.3.0",
+    "typescript": "^4.0.2"
   }
 }
