--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "C's math functions implemented in TypeScript/JavaScript",
   "main": "dist/cmath.js",
   "scripts": {
+    "compile": "tsc",
     "test": "jest --config jest.config.json --coverage"
   },
   "keywords": [
@@ -24,10 +25,10 @@
   "license": "MIT",
   "type": "module",
   "devDependencies": {
-    "@types/jest": "^26.0.13",
-    "@types/node": "^14.10.2",
-    "jest": "^26.4.2",
-    "ts-jest": "^26.3.0",
-    "typescript": "^4.0.2"
+    "@types/jest": "^26.0.19",
+    "@types/node": "^14.14.17",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.3"
   }
 }
