--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"module": "ES6",
+		"module": "ES2020",
 		"moduleResolution": "node",
 		"noImplicitReturns": true,
 		"noUnusedLocals": true,
@@ -8,7 +8,7 @@
 		"preserveConstEnums": true,
 		"sourceMap": true,
 		"strict": true,
-		"target": "ESNext"
+		"target": "ES2020"
 	},
 	"include": [
 		"src/**/*"
