--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cmath",
+  "name": "cmath-js",
   "version": "1.0.2",
   "description": "C's math functions implemented in TypeScript/JavaScript",
   "main": "dist/cmath.js",
