Add repository to package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "C's math functions implemented in TypeScript/JavaScript",
   "main": "dist/cmath.js",
   "types": "dist/cmath.d.ts",
+  "homepage": "https://github.com/oskarlh/cmath.js",
+  "repository": "github:oskarlh/cmath.js",
   "scripts": {
     "compile": "tsc",
     "test": "jest --config jest.config.json --coverage"
