Use template-typescript-node-library as a base

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,16 +1,37 @@
 {
-	// Use IntelliSense to learn about possible attributes.
-	// Hover to view descriptions of existing attributes.
-	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
 	"version": "0.2.0",
 	"configurations": [
 		{
-			"type": "node",
+			"internalConsoleOptions": "openOnSessionStart",
+			"name": "Watch, build (without typechecking) & run",
+			"outFiles": ["${workspaceFolder}/dist/**/*.js"],
 			"request": "launch",
-			"name": "Launch Program",
-			"program": "${workspaceFolder}\\test\\cmath.test.ts",
-			"runtimeArgs": ["--experimental-modules"],
-			"outFiles": ["${workspaceFolder}/dist/**/*.js"]
+			"restart": true,
+  			"runtimeArgs": ["run", "watch"],
+       		"runtimeExecutable": "npm",
+			"skipFiles": ["<node_internals>/**", "node_modules/**"],
+			"type": "node",
+		},
+		{
+			"internalConsoleOptions": "openOnSessionStart",
+			"name": "Build (with typechecking) & run",
+			"outFiles": ["${workspaceFolder}/dist/**/*.js"],
+			"preLaunchTask": "npm: build",
+			"request": "launch",
+  			"runtimeArgs": ["run", "start-debug"],
+       		"runtimeExecutable": "npm",
+			"skipFiles": ["<node_internals>/**", "node_modules/**"],
+			"type": "node"
+		},
+		{
+			"internalConsoleOptions": "openOnSessionStart",
+			"name": "Build (with typechecking)",
+			"outFiles": ["${workspaceFolder}/dist/**/*.js"],
+			"request": "launch",
+  			"runtimeArgs": ["run", "build"],
+       		"runtimeExecutable": "npm",
+			"skipFiles": ["<node_internals>/**", "node_modules/**"],
+			"type": "node"
 		}
 	]
 }
