--- a/.prettierrc
+++ b/.prettierrc
@@ -2,9 +2,9 @@
 	"arrowParens": "always",
 	"bracketSpacing": true,
 	"endOfLine": "lf",
-	"semi": true,
-	"trailingComma": "all",
-	"singleQuote": false,
 	"printWidth": 100,
+	"quoteProps": "as-needed",
+	"semi": true,
+	"singleQuote": false,
 	"useTabs": true
 }
