--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
 	"name": "cmath-js",
-	"version": "1.0.3",
-	"description": "C's math functions implemented in TypeScript/JavaScript",
-	"main": "dist/cmath.js",
-	"types": "dist/cmath.d.ts",
 	"homepage": "https://github.com/oskarlh/cmath.js",
 	"repository": "github:oskarlh/cmath.js",
-	"scripts": {
-		"compile": "tsc",
-		"test": "jest --config jest.config.json --coverage"
-	},
+	"version": "1.0.4",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
+	"type": "module",
+	"author": "Oskar Larsson Högfeldt <oskar@oskar.pm>",
+	"license": "MIT",
+	"description": "C's math functions implemented in TypeScript/JavaScript",
 	"keywords": [
 		"cmath",
 		"C",
@@ -24,15 +23,28 @@
 		"Web",
 		"Browser"
 	],
-	"author": "Oskar Larsson Högfeldt",
-	"license": "MIT",
-	"type": "module",
 	"devDependencies": {
-		"@types/jest": "^26.0.19",
-		"@types/node": "^14.14.17",
-		"jest": "^26.6.3",
-		"prettier": "^2.2.1",
-		"ts-jest": "^26.4.4",
-		"typescript": "^4.1.3"
+		"@swc/cli": "^0.1.57",
+		"@swc/core": "^1.3.18",
+		"@swc/jest": "^0.2.23",
+		"@types/jest": "^29",
+		"@types/node": "^20",
+		"@typescript-eslint/eslint-plugin": "^6.2",
+		"@typescript-eslint/parser": "^6.2",
+		"eslint": "^8.5.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-prettier": "^5",
+		"jest": "^29.3.1",
+		"prettier": "^3",
+		"ts-jest": "^29.0.3",
+		"typescript": "~5.1"
+	},
+	"scripts": {
+		"build": "tsc",
+		"build-and-verify": "npm run test-with-typechecking --ci && npm run lint && npm run build",
+		"build-without-typechecking": "swc -C exclude=.test.ts -d dist -s true -- src",
+		"lint": "eslint .",
+		"test": "jest",
+		"test-with-typechecking": "jest --config=jest.config.with-typechecking.js"
 	}
 }
