--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "cmath-js",
 	"homepage": "https://github.com/oskarlh/cmath.js",
 	"repository": "github:oskarlh/cmath.js",
-	"version": "1.0.4",
+	"version": "1.0.6",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"type": "module",
@@ -46,5 +46,8 @@
 		"lint": "eslint .",
 		"test": "jest",
 		"test-with-typechecking": "jest --config=jest.config.with-typechecking.js"
-	}
+	},
+	"files": [
+		"dist"
+	]
 }
