--- a/package.json
+++ b/package.json
@@ -10,34 +10,34 @@
 	"license": "MIT",
 	"description": "C's math functions implemented in TypeScript/JavaScript",
 	"keywords": [
-		"cmath",
+		"Browser",
 		"C",
 		"C++",
+		"cmath",
+		"ECMAScript",
+		"JavaScript",
 		"Math",
 		"Maths",
-		"JavaScript",
-		"ECMAScript",
-		"TypeScript",
 		"Node",
 		"NodeJS",
-		"Web",
-		"Browser"
+		"TypeScript",
+		"Web"
 	],
 	"devDependencies": {
-		"@swc/cli": "^0.1.57",
-		"@swc/core": "^1.3.18",
-		"@swc/jest": "^0.2.23",
+		"@swc/cli": "^0.1",
+		"@swc/core": "^1",
+		"@swc/jest": "^0.2",
 		"@types/jest": "^29",
 		"@types/node": "^20",
-		"@typescript-eslint/eslint-plugin": "^6.2",
-		"@typescript-eslint/parser": "^6.2",
-		"eslint": "^8.5.0",
-		"eslint-config-prettier": "^8.3.0",
+		"@typescript-eslint/eslint-plugin": "^6",
+		"@typescript-eslint/parser": "^6",
+		"eslint": "^8",
+		"eslint-config-prettier": "^9",
 		"eslint-plugin-prettier": "^5",
-		"jest": "^29.3.1",
+		"jest": "^29",
 		"prettier": "^3",
-		"ts-jest": "^29.0.3",
-		"typescript": "~5.1"
+		"ts-jest": "^29",
+		"typescript": "~5.2"
 	},
 	"scripts": {
 		"build": "tsc",
