--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "cmath-js",
-	"homepage": "https://github.com/oskarlh/cmath.js",
-	"repository": "github:oskarlh/cmath.js",
+	"homepage": "https://github.com/oskarlh/cmath-js",
+	"repository": "github:oskarlh/cmath-js",
 	"version": "1.0.6",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
