--- a/.github/workflows/github-actions-npm-publish.yml
+++ b/.github/workflows/github-actions-npm-publish.yml
@@ -9,16 +9,15 @@ jobs:
     name: npm-publish
     runs-on: ubuntu-latest
     steps:
-    - name: "Checkout repository"
-      uses: actions/checkout@v3
-    - name: "Publish if package.json's \"version\" field has been updated"
-      uses: pascalgn/npm-publish-action@1.3.9
-      with:
-        tag_name: "v%s"
-        tag_message: "New version - v%s"
-        create_tag: "true"
-        workspace: "."
-        publish_command: "npm"
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GITHUB_TOKEN is automatically generated
-        NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }} # NPM_AUTH_TOKEN needs to be configured in the repository settings
+      - name: "Checkout repository"
+        uses: actions/checkout@v4
+      - name: "If package.json's \"version\" field has been updated, release to NPM"
+        uses: JS-DevTools/npm-publish@v3.0.0
+        id: publish
+        with:
+          provenance: true
+          token: ${{ secrets.NPM_AUTH_TOKEN }} # NPM_AUTH_TOKEN needs to be configured in the repository settings
+      - if: ${{ steps.publish.outputs.type }}
+        run: echo "New version released!"
+      - if: ${{ !steps.publish.outputs.type }}
+        run: echo "Did not release."
