--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"build-and-verify": "npm run test-with-typechecking --ci && npm run lint && npm run build",
 		"build-without-typechecking": "swc -C exclude=.test.ts -d dist -s true -- src",
 		"lint": "eslint .",
+		"prepack": "npm run build-and-verify",
 		"test": "jest",
 		"test-with-typechecking": "jest --config=jest.config.with-typechecking.js"
 	},
