--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
 	"name": "cmath-js",
 	"homepage": "https://github.com/oskarlh/cmath-js",
-	"repository": "github:oskarlh/cmath-js",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/oskarlh/cmath-js.git"
+	},
 	"version": "1.0.7",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -44,7 +47,7 @@
 		"build-and-verify": "npm run test-with-typechecking --ci && npm run lint && npm run build",
 		"build-without-typechecking": "swc -C exclude=.test.ts -d dist -s true -- src",
 		"lint": "eslint .",
-		"prepack": "npm run build-and-verify",
+		"prepack": "npm run build",
 		"test": "jest",
 		"test-with-typechecking": "jest --config=jest.config.with-typechecking.js"
 	},
