Rename publish Action

--- a/.github/workflows/github-actions-npm-publish.yml
+++ b/.github/workflows/github-actions-npm-publish.yml
@@ -1,4 +1,4 @@
-name: "Publish to NPM"
+name: "Publish to NPM if package.json's \"version\" field was updated"
 on:
   workflow_run:
     branches: [ "main" ]
