--- a/.github/workflows/github-actions-npm-publish.yml
+++ b/.github/workflows/github-actions-npm-publish.yml
@@ -21,3 +21,5 @@ jobs:
         run: echo "New version released!"
       - if: ${{ !steps.publish.outputs.type }}
         run: echo "Did not release."
+permissions:
+  id-token: write # Needed for provenance
