--- a/.github/workflows/github-actions-depandabot-auto-approve.yml
+++ b/.github/workflows/github-actions-depandabot-auto-approve.yml
@@ -5,7 +5,7 @@ permissions:
 jobs:
   dependabot:
     runs-on: ubuntu-latest
-    if: ${{ github.actor == 'dependabot[bot]' }}
+    if: ${{ github.actor == "dependabot[bot]" }}
     steps:
       - name: Dependabot metadata
         id: metadata
