--- a/package.json
+++ b/package.json
@@ -45,13 +45,13 @@
 	},
 	"scripts": {
 		"build": "tsc",
-		"build-and-verify": "npm run test-with-typechecking --ci && npm run lint && npm run build",
-		"build-without-typechecking": "swc -C exclude=.test.ts -d dist -s true -- src",
 		"lint": "eslint .",
 		"lint-fix": "eslint . --fix",
 		"prepack": "npm run build",
 		"test": "jest",
-		"test-with-typechecking": "jest --config=jest.config.with-typechecking.js"
+		"test-with-typechecking": "jest --config=jest.config.with-typechecking.js",
+		"typecheck": "tsc --noEmit",
+		"verify": "npm run test-with-typechecking --ci && npm run lint && npm run typecheck"
 	},
 	"files": [
 		"dist"
