--- a/.github/workflows/github-actions-publish.yml
+++ b/.github/workflows/github-actions-publish.yml
@@ -6,9 +6,11 @@ on:
     workflows: [ "Verify: Test, lint, and typecheck" ]
 
 jobs:
-  publish:
-    name: publish
+  check:
+    name: check
     runs-on: ubuntu-latest
+    outputs:
+      exists: ${{ steps.checkpublish.outputs.exists }}
     steps:
       - name: "Checkout repository"
         uses: actions/checkout@v4
@@ -17,19 +19,22 @@ jobs:
         id: checkpublish
         uses: tehpsalmist/npm-publish-status-action@v1
 
+  publish:
+    name: publish
+    runs-on: ubuntu-latest
+    needs: check-if-published-already
+    if: needs.check.outputs.exists == '0' # Do not run if NPM already has this version
+    steps:
       - name: "Log in to DockerHub"
-        if: ${{ steps.checkpublish.outputs.exists == "0" }} # Ignore if NPM already has this version
         uses: docker/login-action@v3
         with:
           password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
           username: ${{ secrets.DOCKERHUB_USERNAME }}
 
       - name: "Build an image containing everything needed for building and publishing the library"
-        if: ${{ steps.checkpublish.outputs.exists == "0" }} # Ignore if NPM already has this version
         run: docker compose -f ci-publish.docker-compose.yml build
 
       - name: "Publish the library"
-        if: ${{ steps.checkpublish.outputs.exists == "0" }} # Ignore if NPM already has this version
         run: docker compose -f ci-publish.docker-compose.yml run ci-publish
         env:
           NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
