--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
 		"type": "git",
 		"url": "git+https://github.com/oskarlh/cmath-js.git"
 	},
-	"version": "1.0.14",
-	"main": "dist/index.js",
-	"types": "dist/index.d.ts",
+	"version": "1.0.15",
+	"exports": [
+		"./dist/index.js"
+	],
+	"types": "./dist/index.d.ts",
 	"type": "module",
 	"author": "Oskar Larsson Högfeldt <oskar@oskar.pm>",
 	"contributors": [
@@ -20,6 +22,7 @@
 		"C++",
 		"cmath",
 		"ECMAScript",
+		"frexp",
 		"JavaScript",
 		"Math",
 		"Maths",
