--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
 		"url": "git+https://github.com/oskarlh/cmath-js.git"
 	},
 	"version": "1.0.15",
-	"exports": [
-		"./dist/index.js"
-	],
+	"exports": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"type": "module",
 	"author": "Oskar Larsson Högfeldt <oskar@oskar.pm>",
