--- a/.github/workflows/github-actions-publish.yml
+++ b/.github/workflows/github-actions-publish.yml
@@ -25,6 +25,9 @@ jobs:
     needs: check
     if: needs.check.outputs.exists == '0' # Do not run if NPM already has this version
     steps:
+      - name: "Checkout repository"
+        uses: actions/checkout@v4
+
       - name: "Log in to DockerHub"
         uses: docker/login-action@v3
         with:
