Fix syntax error in github-actions-depandabot-auto-approve.yml

--- a/.github/workflows/github-actions-depandabot-auto-approve.yml
+++ b/.github/workflows/github-actions-depandabot-auto-approve.yml
@@ -6,7 +6,7 @@ jobs:
   dependabot:
     name: "Auto-approve"
     runs-on: ubuntu-latest
-    if: ${{ github.actor == 'dependabot[bot]'' }}
+    if: ${{ github.actor == 'dependabot[bot]' }}
     steps:
       - name: "Dependabot metadata"
         id: metadata
