--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 		"type": "git",
 		"url": "git+https://github.com/oskarlh/cmath-js.git"
 	},
-	"version": "1.4.1",
+	"version": "1.4.2",
 	"exports": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"type": "module",
@@ -21,16 +21,22 @@
 		"C",
 		"C++",
 		"cmath",
+		"cmath-js",
 		"ECMAScript",
 		"frexp",
+		"gcd",
+		"iota",
 		"JavaScript",
+		"lcm",
 		"Math",
 		"Mathematics",
 		"Maths",
+		"NaN",
 		"Node",
 		"NodeJS",
 		"Numerics",
 		"popcount",
+		"signbit",
 		"TypeScript"
 	],
 	"devDependencies": {
