Add even more keywords

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 		"type": "git",
 		"url": "git+https://github.com/oskarlh/cmath-js.git"
 	},
-	"version": "1.4.3",
+	"version": "1.4.4",
 	"exports": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"type": "module",
@@ -23,11 +23,16 @@
 		"C++",
 		"cmath",
 		"cmath-js",
+		"double",
 		"ECMAScript",
+		"float",
+		"float64",
 		"frexp",
 		"gcd",
 		"IEEE754",
 		"iota",
+		"int32",
+		"int53",
 		"JavaScript",
 		"lcm",
 		"Math",
