--- a/.github/workflows/github-actions-verify.yml
+++ b/.github/workflows/github-actions-verify.yml
@@ -9,7 +9,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: "DockerHub Login"
-        if: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
+        if: ${{ secrets }}
         uses: docker/login-action@v3
         with:
           password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
