--- a/.github/workflows/github-actions-verify.yml
+++ b/.github/workflows/github-actions-verify.yml
@@ -14,7 +14,8 @@ jobs:
         run: |
           [ "${{ secrets.DOCKERHUB_USERNAME }}" = "" ]
           available=$?
-          echo "available=${available}" >> $GITHUB_OUTPUT;
+          echo "available=${available}" >> $GITHUB_OUTPUT
+          exit 0
 
       - name: "DockerHub Login"
         if: ${{ steps.dockerhub-secrets-check.outputs.available }}
