--- a/.github/workflows/github-actions-verify.yml
+++ b/.github/workflows/github-actions-verify.yml
@@ -13,6 +13,7 @@ jobs:
         shell: bash
         run: |
           [ "${{ secrets.DOCKERHUB_USERNAME }}" = "" ]
+          available=0
 
       - name: "DockerHub Login"
         if: ${{ steps.dockerhub-secrets-check.outputs.available }}
