--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 		"type": "git",
 		"url": "git+https://github.com/oskarlh/cmath-js.git"
 	},
-	"version": "1.4.4",
+	"version": "1.4.5",
 	"exports": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"type": "module",
@@ -49,20 +49,19 @@
 		"TypeScript"
 	],
 	"devDependencies": {
-		"@swc/cli": "^0.3",
+		"@swc/cli": "^0.4",
 		"@swc/core": "^1",
 		"@swc/jest": "^0.2",
 		"@types/jest": "^29",
 		"@types/node": "^20",
-		"@typescript-eslint/eslint-plugin": "^7",
-		"@typescript-eslint/parser": "^7",
-		"eslint": "^8",
+		"eslint": "^9",
 		"eslint-config-prettier": "^9",
 		"eslint-plugin-prettier": "^5",
 		"jest": "^29",
 		"prettier": "^3",
 		"ts-jest": "^29",
-		"typescript": "~5.4"
+		"typescript": "~5.5",
+		"typescript-eslint": "^8.0.0-alpha.39"
 	},
 	"scripts": {
 		"build": "tsc",
