--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
 		"prepack": "npm run build",
 		"test": "jest",
 		"test-with-typechecking": "jest --config=jest.config.with-typechecking.js",
-		"typecheck": "tsc --noEmit",
+		"typecheck": "tsc --project tsconfig.build.json --noEmit",
 		"verify": "npm run test-with-typechecking --ci && npm run lint && npm run typecheck"
 	},
 	"files": [
