--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"@swc/cli": "^0.4",
 		"@swc/core": "^1",
 		"@swc/jest": "^0.2",
+		"@types/eslint__js": "^8.42.3",
 		"@types/jest": "^29",
 		"@types/node": "^20",
 		"eslint": "^9",
@@ -64,13 +65,13 @@
 		"typescript-eslint": "^8.0.0-alpha.39"
 	},
 	"scripts": {
-		"build": "tsc",
+		"build": "tsc --project tsconfig.build.json",
 		"lint": "eslint .",
 		"lint-fix": "eslint . --fix",
 		"prepack": "npm run build",
 		"test": "jest",
 		"test-with-typechecking": "jest --config=jest.config.with-typechecking.js",
-		"typecheck": "tsc --noEmit",
+		"typecheck": "tsc --project tsconfig.build.json --noEmit",
 		"verify": "npm run test-with-typechecking --ci && npm run lint && npm run typecheck"
 	},
 	"files": [
